--- a/0-preface.qmd
+++ b/0-preface.qmd
@@ -80,7 +80,7 @@ The *Data Science Workflow*, introduced in Chapter [-@sec-ch2-intro-data-science
 
 3.  *Exploratory Data Analysis (EDA)*: Visualize and summarize data to uncover patterns (Chapter [-@sec-ch4-EDA]).
 
-4.  *Data Setup for Modeling*: Select features, partition datasets, and scale variables (Chapter [-@sec-ch6-setup-data]).
+4.  *Data Setup to Model*: Select features, partition datasets, and scale variables (Chapter [-@sec-ch6-setup-data]).
 
 5.  *Modeling*: Build and train predictive models using a range of machine learning algorithms (Chapters [-@sec-ch7-classification-knn] to [-@sec-ch13-clustering]).
 
