--- a/1-Intro-R.qmd
+++ b/1-Intro-R.qmd
@@ -14,7 +14,7 @@ R or Python? Students often ask whether they should choose R or Python. While Py
 
 To give a concrete example, imagine working with customer data to understand why users cancel their mobile service. With R, you can summarize call behavior, compare usage patterns across churned and retained customers, and create intuitive plots to reveal trends. For instance, you might find that customers who churn tend to spend more time on daytime calls, an insight that could inform proactive retention strategies. This kind of analysis is explored in greater detail in Chapter [-@sec-ch4-EDA].
 
-Throughout this book, we follow a structured framework known as the *Data Science Workflow*, which includes seven key steps: problem understanding, data preparation, exploratory data analysis, data setup for modeling, modeling, evaluation, and communication. Each chapter builds on this framework. The foundational skills introduced here, including navigating R, importing and manipulating data, and generating basic visualizations, will support your work at every stage. A detailed overview is provided in Chapter [-@sec-ch2-intro-data-science] (see @fig-ch2_DSW).
+Throughout this book, we follow a structured framework known as the *Data Science Workflow*, which includes seven key steps: Problem Understanding, Data Preparation, Exploratory Data Analysis, Data Setup to Model, Modeling, Evaluation, and Deployment. Each chapter builds on this framework. The foundational skills introduced here, including navigating R, importing and manipulating data, and generating basic visualizations, will support your work at every stage. A detailed overview is provided in Chapter [-@sec-ch2-intro-data-science] (see @fig-ch2_DSW).
 
 ### Why Choose R for Data Science? {.unnumbered}
 
@@ -679,6 +679,7 @@ data(churn)      # Load the churn dataset
 # Explore the structure of the data
 str(churn)
 ```
+
 The `str()` function provides a concise overview of variable types and values, which is an important first step when working with a new dataset.
 
 > *Try it yourself*: Create a small data frame with three columns: one numeric, one character, and one logical. Then use `$` to extract or modify individual columns, and try adding a new column using a logical condition.
