--- a/13-Clustering.qmd
+++ b/13-Clustering.qmd
@@ -268,7 +268,7 @@ str(cereal)
 Here is an overview of the key variables:
 
 -   `name`: Name of the cereal (categorical-nominal).
--   `manuf`: Manufacturer (categorical-nominal).
+-   `manuf`: Manufacturer of cereal (categorical-nominal), coded into seven categories: "A" for American Home Food Products, "G" for General Mills, "K" for Kelloggs, "N" for Nabisco, "P" for Post, "Q" for Quaker Oats, and "R" for Ralston Purina.
 -   `type`: Cereal type, hot or cold (categorical-binary).
 -   `calories`: Calories per serving (numerical).
 -   `protein`: Grams of protein per serving (numerical).
@@ -359,6 +359,7 @@ ggplot(data = cereal_mm) +
     geom_histogram(aes(x = sodium), color = "blue", fill = "lightblue") + 
     theme_minimal() + ggtitle("After min-max normalization")
 ```
+
 As shown in the histograms, normalization rescales all features to the $[0, 1]$ range. This prevents variables like sodium or potassium (originally measured in large units) from overpowering the clustering process.
 
 With the dataset cleaned, imputed, and normalized, we are now ready to explore how cereals naturally group together. But first, how many clusters should we use?
