--- a/2-Intro-data-science.qmd
+++ b/2-Intro-data-science.qmd
@@ -87,7 +87,7 @@ To put this into action, we use a practical framework called *CRISP-DM* (Cross-I
 
 3.  *Exploratory Data Analysis (EDA)* – Use summaries and visualizations to understand distributions, spot patterns, and identify potential issues.
 
-4.  *Data Setup for Modeling* – Engineer features, normalize values, and select predictors.
+4.  *Data Setup to Model* – Engineer features, normalize values, and select predictors.
 
 5.  *Modeling* – Apply machine learning or statistical models to uncover patterns and generate predictions.
 
@@ -207,7 +207,7 @@ These tools support both data quality assessment and analytical decision-making.
 
 In R, EDA typically begins with functions like `summary()` and `str()` to examine structure and variable types. The **ggplot2** package provides a versatile framework for creating diagnostic and exploratory plots. We explore these techniques in greater detail in Chapter [-@sec-ch4-EDA], using real-world datasets to demonstrate how EDA guides effective modeling and communication.
 
-## Data Setup for Modeling
+## Data Setup to Model
 
 After gaining a clear understanding of the data through exploratory analysis, the next step is to prepare it for modeling. This stage bridges exploration and prediction, shaping the dataset into a form that supports learning algorithms and ensures robust performance.
 
