--- a/3-Data-preparation.qmd
+++ b/3-Data-preparation.qmd
@@ -14,7 +14,7 @@ By contrast, datasets found on platforms like [Kaggle](https://www.kaggle.com) a
 
 To bring data preparation techniques to life, we begin with the *diamonds* dataset from the **ggplot2** package, a structured and relatively clean dataset that allows us to practice foundational skills. Later in the chapter, we shift to the *adult* income dataset, where we apply the same techniques to a more realistic, messier context.
 
-Although this chapter focuses on data preparation, many of the steps, such as detecting outliers, handling missing values, and transforming variables, overlap with *exploratory data analysis* (Chapter [-@sec-ch4-EDA]) and *data setup for modeling* (Chapter [-@sec-ch6-setup-data]). These stages are often revisited in practice, reflecting the iterative nature of the Data Science Workflow.
+Although this chapter focuses on data preparation, many of the steps, such as detecting outliers, handling missing values, and transforming variables, overlap with *Exploratory Data Analysis* (Chapter [-@sec-ch4-EDA]) and *Data Setup to Model* (Chapter [-@sec-ch6-setup-data]). These stages are often revisited in practice, reflecting the iterative nature of the Data Science Workflow.
 
 With a clear understanding of the problem and its connection to the available data, we now move to the next step: preparing the dataset for analysis. This step builds the foundation for meaningful insights and reliable machine learning models, transforming raw information into structured knowledge.
 
@@ -516,13 +516,11 @@ This transformation adds new columns such as `marital.status_Divorced`, `marital
 
 While one-hot encoding is simple and effective, it can quickly increase the number of features, especially when applied to high-cardinality variables (e.g., zip codes or product names). Before encoding, consider whether the added dimensionality is manageable for your model and whether all categories are meaningful for the analysis.
 
-
-
 ## Case Study: Preparing Data to Predict High Earners {#sec-ch3-data-pre-adult}
 
-How can we determine whether a person earns more than \$50,000 per year based on their demographic and occupational background? This question is relevant in many contexts, including economic research, policy evaluation, and the design of algorithmic hiring systems.  
+How can we determine whether a person earns more than \$50,000 per year based on their demographic and occupational background? This question is relevant in many contexts, including economic research, policy evaluation, and the design of algorithmic hiring systems.
 
-In this case study, we work with the *adult* dataset, originally derived from the [US Census Bureau](https://www.census.gov) and made available through the [**liver**](https://cran.r-project.org/web/packages/liver/refman/liver.html#adult) package. The dataset contains variables such as age, education, marital status, occupation, and income, offering a rich basis for analysis.  
+In this case study, we work with the *adult* dataset, originally derived from the [US Census Bureau](https://www.census.gov) and made available through the [**liver**](https://cran.r-project.org/web/packages/liver/refman/liver.html#adult) package. The dataset contains variables such as age, education, marital status, occupation, and income, offering a rich basis for analysis.
 
 Our goal is to predict whether an individual’s annual income exceeds \$50,000. Later, in Chapter [-@sec-ch11-tree-models], we will revisit this dataset to construct predictive models with decision trees and random forests (see Section [-@sec-ch11-case-study]). At this stage, however, the emphasis is on preparing the data: handling missing values, encoding categorical variables, detecting outliers, and scaling numerical features so that the dataset is ready for modeling.
 
@@ -825,22 +823,20 @@ This section includes exercises designed to deepen your understanding of data pr
 
 ### Modeling and Real-World Scenarios {.unnumbered}
 
-28. Build a logistic regression model predicting income (`>50K`) using selected numerical predictors. Preprocess the data and interpret key coefficients.
+28. If you were designing a credit scoring system, how would you encode features like `employment.type` or `loan.purpose`?
 
-29. If you were designing a credit scoring system, how would you encode features like `employment.type` or `loan.purpose`?
+29. In a dataset where 25% of income values are missing, which imputation strategy would you use, and why?
 
-30. In a dataset where 25% of income values are missing, which imputation strategy would you use, and why?
+30. A customer satisfaction variable includes five levels from “Very satisfied” to “Very dissatisfied.” Which encoding method is most appropriate, and why?
 
-31. A customer satisfaction variable includes five levels from “Very satisfied” to “Very dissatisfied.” Which encoding method is most appropriate, and why?
-
-32. Would you handle outliers in patient temperature data differently than outliers in income data? Explain your reasoning.
+31. Would you handle outliers in patient temperature data differently than outliers in income data? Explain your reasoning.
 
 ### Ethics and Reflection {.unnumbered}
 
-33. What ethical concerns might arise from dropping rows with missing data, particularly for underrepresented groups?
+32. What ethical concerns might arise from dropping rows with missing data, particularly for underrepresented groups?
 
-34. How can careless encoding of categorical variables lead to biased or unfair model outcomes? Provide an example.
+33. How can careless encoding of categorical variables lead to biased or unfair model outcomes? Provide an example.
 
-35. A model performs well in training but poorly in production. How might decisions made during data preparation explain this discrepancy?
+34. A model performs well in training but poorly in production. How might decisions made during data preparation explain this discrepancy?
 
-36. Reflect on a dataset you have worked with (or the *housePrice* dataset from the **liver** package). Which data preparation steps would you revise based on the techniques from this chapter?
+35. Reflect on a dataset you have worked with (or the *housePrice* dataset from the **liver** package). Which data preparation steps would you revise based on the techniques from this chapter?
