--- a/6-Setup-data.qmd
+++ b/6-Setup-data.qmd
@@ -26,7 +26,7 @@ These are not just technical details. They reflect essential principles in moder
 
 ### What This Chapter Covers {.unnumbered}
 
-This chapter completes *Step 4 of the Data Science Workflow*, *Setting Up Data for Modeling*. You will learn how to:
+This chapter completes *Step 4 of the Data Science Workflow*, *Data Setup to Model*. You will learn how to:
 
 -   *Partition* a dataset into training and testing subsets to simulate deployment scenarios.
 
@@ -38,7 +38,7 @@ By mastering these tasks, you ensure that your data is not only clean but also s
 
 ## Why Is It Necessary to Partition the Data?
 
-The first step in preparing data for supervised learning is partitioning the dataset into training and testing subsets, a practice often misunderstood by newcomers to data science. A common question is: *Why split the data before modeling?* The answer lies in *generalization*, the model’s ability to make accurate predictions on new, unseen data. This section explains why this step is essential for building models that not only perform well during training but also hold up in real-world applications.
+For supervised learning, the first step in setting up data for modeling is to partition the dataset into training and testing subsets—a step often misunderstood by newcomers to data science. A common question is: *Why split the data before modeling?* The key reason is *generalization*, or the model’s ability to make accurate predictions on new, unseen data. This section explains why partitioning is essential for building models that perform well not only during training but also in real-world applications.
 
 As part of Step 4 in the Data Science Workflow, partitioning precedes validation and class balancing. Dividing the data into a *training set* for model development and a *test set* for evaluation simulates real-world deployment. This practice guards against two key modeling pitfalls: *overfitting* and *underfitting*. Their trade-off is illustrated in Figure [-@fig-model-complexity].
 
@@ -130,13 +130,13 @@ How can we be sure that our train-test split truly represents the original datas
 Validation involves comparing the distributions of key variables, especially the target and influential predictors, across the training and testing sets. Since most datasets include many features, we usually focus on a subset that plays a central role in modeling. The statistical test we choose depends on the type of variable, as summarized in @tbl-partition-test.
 
 ::: {#tbl-partition-test .table}
-| Type of Features                            | Suggested Test (from @sec-ch5-statistics) |
-|--------------------------------------|----------------------------------|
-| Numerical feature                           | Two-sample t-test                         |
-| Binary/Flag feature                         | Two-sample Z-test                         |
-| Categorical feature (with $> 2$ categories) | Chi-square test                           |
+| Type of Features                    | Suggested Test    |
+|-------------------------------------|-------------------|
+| Binary                              | Two-sample Z-test |
+| Numerical                           | Two-sample t-test |
+| Categorical (with $> 2$ categories) | Chi-square test   |
 
-Suggested hypothesis tests for validating partitions, based on the type of target feature.
+Suggested hypothesis tests (from @sec-ch5-statistics) for validating partitions, based on the type of target feature.
 :::
 
 Each test has specific assumptions. Parametric tests like the t-test and Z-test are most appropriate when sample sizes are large and distributions are approximately normal. For categorical features with more than two levels, the Chi-square test is the standard choice.
@@ -203,6 +203,7 @@ table(train_set$churn)
 
 prop.table(table(train_set$churn))
 ```
+
 The output shows that churners (`churn = "yes"`) represent only a small proportion of the data, about `r round(prop.table(table(train_set$churn))[1], 2)`, compared to non-churners. This class imbalance can result in a model that underemphasizes the very group we are most interested in predicting.
 
 To address this in R, we can use the `ovun.sample()` function from the **ROSE** package to oversample the minority class so that it makes up 30% of the training set. This target ratio is illustrative; the optimal value depends on the use case and modeling goals.
@@ -231,7 +232,7 @@ In summary, dealing with class imbalance helps the model focus on the right outc
 
 ## Chapter Summary and Takeaways
 
-This chapter finalized *Step 4: Data Setup for Modeling* in the Data Science Workflow by preparing the dataset for valid and generalizable model development.
+This chapter finalized *Step 4: Data Setup to Model* in the Data Science Workflow by preparing the dataset for valid and generalizable model development.
 
 -   The partitioning of data into training and testing sets was established as a safeguard against overfitting and a way to simulate real-world prediction tasks.
 
