--- a/8-Model-evaluation.qmd
+++ b/8-Model-evaluation.qmd
@@ -18,7 +18,7 @@ This brings us to the *Model Evaluation* phase, a pivotal step in the Data Scien
 
 3.  *Exploratory Data Analysis (EDA)*: identifying patterns and relationships;
 
-4.  *Data Setup for Modeling*: scaling, encoding, and partitioning the data;
+4.  *Data Setup to Model*: scaling, encoding, and partitioning the data;
 
 5.  *Modeling*: training algorithms to make predictions or uncover structure.
 
@@ -62,16 +62,11 @@ How can we tell exactly where a model performs well, and where it fails? The *co
 
 In binary classification, one class is typically designated as the *positive class*, the class of primary interest, while the other is considered the *negative class*. For instance, in fraud detection, fraudulent transactions are usually labeled as positive, and legitimate ones as negative.
 
-::: {#tbl-confusion-matrix .table}
-| *Predicted*       | Positive                                        | Negative                                    |
-|------------------|----------------------------|--------------------------|
-| *Actual Positive* | [**True Positive (TP)**]{style="color: green;"} | [False Negative (FN)]{style="color: red;"}  |
-| *Actual Negative* | [False Positive (FP)]{style="color: red;"}      | [True Negative (TN)]{style="color: green;"} |
+@fig-ch8-confusion-matrix illustrates the structure of the confusion matrix. The rows represent the *actual* class labels, while the columns represent the *predicted* class labels. Each cell in the matrix represents one of four possible outcomes. *True Positives (TP)* occur when the model correctly predicts the positive class (e.g., fraud detected as fraud). *False Positives (FP)* arise when the model incorrectly flags the positive class (e.g., legitimate transactions incorrectly flagged as fraud). *True Negatives (TN)* are correct predictions of the negative class, while *False Negatives (FN)* represent missed detections of the positive class (e.g., fraudulent transactions classified as legitimate).
 
-Confusion matrix for binary classification, summarizing correct and incorrect predictions based on whether the actual class is positive or negative.
-:::
-
-Each cell in the matrix represents one of four possible outcomes. *True Positives (TP)* occur when the model correctly predicts the positive class (e.g., fraud detected as fraud). *False Positives (FP)* arise when the model incorrectly flags the positive class (e.g., legitimate transactions incorrectly flagged as fraud). *True Negatives (TN)* are correct predictions of the negative class, while *False Negatives (FN)* represent missed detections of the positive class (e.g., fraudulent transactions classified as legitimate).
+```{r fig-ch8-confusion-matrix, echo = FALSE, out.width = "55%", fig.cap = "Confusion matrix for binary classification, summarizing correct and incorrect predictions based on whether the actual class is positive or negative."}
+knitr::include_graphics("images/ch8_confusion-matrix.png")
+```
 
 This structure may feel familiar, it mirrors the concept of *Type I and Type II errors* introduced in Chapter [-@sec-ch5-statistics] on hypothesis testing. The diagonal elements (TP and TN) represent correct predictions, while the off-diagonal elements (FP and FN) represent errors.
 
@@ -437,11 +432,11 @@ Many R packages such as **caret**, **yardstick**, and **MLmetrics** support mult
 
 By leveraging one-vs-all metrics and appropriate averaging strategies, we can gain a nuanced view of model performance in multi-class tasks. These tools help identify weaknesses, compare models, and align evaluation with the goals of the application.
 
-In the next section, we turn to *regression models*, where the outcome variable is continuous rather than categorical, and different evaluation tools are required.
+In the next section, we turn to cases such as regression models, where the target variable is continuous rather than categorical, and different evaluation tools are required.
 
 ## Evaluation Metrics for Continuous Targets
 
-Suppose you want to predict a house’s selling price, a patient's recovery time, or the temperature for next week. These are examples of *regression problems*, where the outcome is a continuous value rather than a discrete class. In such cases, classification metrics do not apply. Instead, we use evaluation metrics specifically designed to assess the accuracy of continuous predictions.
+Suppose you want to predict a house’s selling price, a patient’s recovery time, or tomorrow’s temperature. These are examples of *regression problems*, where the target variable is numerical rather than categorical (see Chapter [-@sec-ch10-regression]). In such cases, classification metrics do not apply. Instead, evaluation metrics tailored to numerical outcomes are used to assess predictive accuracy.
 
 One commonly used metric is the *Mean Squared Error (MSE)*:
 
