--- a/9-Naive-Bayes.qmd
+++ b/9-Naive-Bayes.qmd
@@ -208,7 +208,7 @@ This would cause every married borrower to be classified as `good risk`, regardl
 Laplace smoothing resolves this by adjusting the count of each category. A small constant $k$ (typically $k = 1$) is added to each count, yielding:
 
 $$
-P(\text{bad risk} | \text{married}) = \frac{\text{count}(\text{bad risk} \cap \text{married}) + k}{\text{count}(\text{bad risk}) + k \times \text{number of marital categories}}
+P(\text{bad risk} | \text{married}) = \frac{\text{count}(\text{bad risk} \cap \text{married}) + k}{\text{count}(\text{married}) + k \times \text{number of marital categories}}
 $$
 
 This adjustment ensures that every possible feature-category pair has a non-zero probability, even if unobserved in the training set.
@@ -290,7 +290,7 @@ summary(risk)
 
 As the summary indicates a clean and well-structured dataset with no apparent anomalies, we can proceed to data preparation before training the Naive Bayes classifier.
 
-### Data Setup for Modeling {.unnumbered}
+### Data Setup to Model {.unnumbered}
 
 Before training the Naive Bayes classifier, we begin by splitting the dataset into training and testing sets. This step allows us to evaluate how well the model generalizes to unseen data. We use an 80/20 split, allocating 80% of the data for training and 20% for testing. To maintain consistency with previous chapters, we apply the `partition()` function from the **liver** package:
 
@@ -324,7 +324,7 @@ H_a: \text{At least one of the proportions is different.}
 \end{cases}
 $$
 
-Since the *p*-value exceeds $\alpha = 0.05$, we fail to reject $H_0$. This suggests that the marital status distribution is statistically similar between the training and test sets, indicating that the partition preserves the key structure of the dataset.
+Since the *p*-value exceeds $\alpha = 0.05$, we do not reject $H_0$. This suggests that the marital status distribution is statistically similar between the training and test sets, indicating that the partition preserves the key structure of the dataset.
 
 Unlike distance-based algorithms such as k-nearest neighbors, the Naive Bayes classifier does not rely on geometric distance calculations. Therefore, there is no need to scale numeric variables such as `age` or `income`, and no need to convert categorical variables like `marital` into dummy variables. The algorithm models probability distributions directly, making it robust to different variable types without requiring transformation. This illustrates how preprocessing steps must be tailored to the modeling technique in use.
 
