--- a/packages.bib
+++ b/packages.bib
@@ -112,11 +112,11 @@
 }
 
 @Manual{R-liver,
-  title = {liver: "Eating the Liver of Data Science"},
+  title = {liver: Foundations Toolkit and Datasets for Data Science},
   author = {Reza Mohammadi and Kevin Burke},
   year = {2025},
-  note = {R package version 1.20},
-  url = {https://book-data-science-r.netlify.app/},
+  note = {R package version 1.22},
+  url = {https://book-data-science-r.netlify.app},
 }
 
 @Manual{R-mice,
